src/objects/Paneling__c.object
<CustomObject>
    <fields>
        <fullName>Comment_s1__c</fullName>
        <inlineHelpText>Consensus Bands Comments</inlineHelpText>
        <label>Comment(s):</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_s__c</fullName>
        <inlineHelpText>Consensus Score Comments</inlineHelpText>
        <label>Comment(s):</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_by_Panel_Coordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Panel coordinator will check the check box if they finish the review.</description>
        <label>Completed by Panel Coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_by_Staff_Liaison__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the staff liaison completes the review then he will check the check box</description>
        <label>Completed by Staff Liaison</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consensus_Approach__c</fullName>
        <formula>TEXT( Stage_Number__r.Consensus_Approach__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consensus Approach</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disaster_Type__c</fullName>
        <label>Disaster Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the panel</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <inlineHelpText>Consensus Score Number</inlineHelpText>
        <label>#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <label>Focus Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NOFA_Group_Name1__c</fullName>
        <description>Formula field to display name of the NOFA Group on the paneling object</description>
        <formula>Stage_Number__r.NOFA_Group__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFO Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFA_Group_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for NOFA Group object</description>
        <label>NOFO Group Name</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipLabel>Paneling</relationshipLabel>
        <relationshipName>Paneling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Panel_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Contact object to find panel coordinator</description>
        <label>Panel Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Paneling</relationshipLabel>
        <relationshipName>Paneling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel_Name__c</fullName>
        <label>Panel Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Status_Text__c</fullName>
        <description>Changes the Panel Status Picklist value in to a Text field, which can be used to create Formula fields.</description>
        <formula>TEXT( Panel_Status__c )</formula>
        <label>Panel Status Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Status__c</fullName>
        <description>Panel Status can be selected from set of values</description>
        <label>Panel Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <label>Project State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <inlineHelpText>Consensus Bands Response</inlineHelpText>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <label>Round</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Liaison__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup to Contact object to select a staff for paneling</description>
        <label>Staff Liaison</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Paneling (Staff Liaison)</relationshipLabel>
        <relationshipName>Paneling1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Liasion1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Liasion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Paneling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Stage_Number__r.Name__c</formula>
        <label>Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup to stages object to the stage number</description>
        <label>Stage Number</label>
        <referenceTo>Stages__c</referenceTo>
        <relationshipLabel>Paneling</relationshipLabel>
        <relationshipName>Panel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of the panel</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the panel</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert or Blended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Paneling</label>
    <nameField>
        <displayFormat>Panel-{00000000}</displayFormat>
        <label>Panel ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paneling</pluralLabel>
    <recordTypes>
        <fullName>Consensus_Bands</fullName>
        <active>true</active>
        <label>Consensus Bands</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consensus_Scores</fullName>
        <active>true</active>
        <label>Consensus Scores</label>
    </recordTypes>
    <recordTypes>
        <fullName>Not_Applicable</fullName>
        <active>true</active>
        <label>Not Applicable</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Consensus_Results</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND((Consensus_Approach__c ==&quot;Consensus Scores&quot;),(ISBLANK( Field1__c ))),

AND((Consensus_Approach__c ==&quot;Consensus Scores&quot;),(ISBLANK( Comment_s__c ))))</errorConditionFormula>
        <errorMessage>Enter Number and Comments for Consensus Scores</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consensus_Results1</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND((Consensus_Approach__c ==&quot;Consensus Bands&quot;),(ISBLANK(  Response__c ))),
AND((Consensus_Approach__c ==&quot;Consensus Bands&quot;),(ISBLANK(  Comment_s1__c ))))</errorConditionFormula>
        <errorMessage>Enter Response and Comments for Consensus Bands</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_greater_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c   &gt;=   End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Panel End Date must be greater than Panel Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Panel_End_Date_with_Stage</fullName>
        <active>true</active>
        <description>The Panel End Date on the Paneling Object must be greater than or equal to the Stage Start Date on the parent Stage, and less than or equal to the Stage End Date on the parent Stage</description>
        <errorConditionFormula>IF( End_Date__c &gt;=  Stage_Number__r.Start_Date__c &amp;&amp; End_Date__c &lt;=  Stage_Number__r.End_Date__c , False, True)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date must be Greater than Stage Review Start date, AND less than Stage Review End date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Start_Date</fullName>
        <active>true</active>
        <description>Panel Start Date must be greater than or equal to the stage start date</description>
        <errorConditionFormula>IF( Start_Date__c &gt;= Stage_Number__r.Start_Date__c , false, true)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Panel Start Date must be greater than or equal to Stage Start date</errorMessage>
    </validationRules>
</CustomObject>